Refactor codes and add unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,20 @@
             <version>2.0.0-beta</version>
         </dependency>
 
+        <!-- mock framework for unit testing -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
