--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -1,8 +1,11 @@
 report {
   storage {
     protocol=http
-    host=127.0.0.1
-    port=8080
-    path=/api
+    host = 192.168.59.87
+    port = 8081
+    path = /api/results/create
+  },
+  usage {
+    company = iflytek
   }
 }
